# goosig

./: .eslintrc.json  .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  eslint-bigint  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
bench/: index.js  native-only.js  native.js  verify.js
etc/: RSA-2048.txt  RSA-617.txt  challengenumbers.txt  faq.txt  gencombs.js  generate.js  genvectors.js  rsa-fact.txt  rsa-numbers.txt
lib/: api.js  bigmath.js  constants.js  consts.js  defs.js  goo-browser.js  goo.js  goosig.js  mixins.js  native.js  ops.js  primes.js  prng.js  rng.js  rsa.js  sign.js  signature.js  test-util.js  util.js  verify.js  wire.js
lib/internal/: constants.js  rsa.js
lib/js/: bigmath.js  goo.js  primes.js  prng.js  rng.js  signature.js  util.js
lib/native/: binding.js  goo.js
port/bench/: index.js  native.js
port/lib/: challenge.js  consts.js  goosig.js  heapq.js  ops.js  rsa.js
port/test/: goo-test.js  native-test.js  ops-test.js
rewrite/bench/: index.js  native.js
rewrite/lib/: bigmath.js  constants.js  goo.js  primes.js  rng.js  signature.js
rewrite/test/: goo-test.js  ops-test.js  util-test.js
scripts/: fuzz.js  genvectors-sign.js  genvectors-verify.js  run-test.sh
src/: goosig.c  goosig.cc  goosig.h  random.cc  random.h
src/goo/: chacha20.c  chacha20.h  drbg.c  drbg.h  goo.c  goo.h  hmac.c  hmac.h  internal.h  primes.h  random.c  random.h  scratch.c  sha256.c  sha256.h  sign.c  test.c  util.h
test/: api-test.js  chacha20-test.js  drbg-test.js  fuzz.js  goo-test.js  goosig-test.js  mod-test.js  ops-test.js  primes-test.js  prng-test.js  rng-test.js  rsa-test.js  signature-test.js  test-native.js  util-test.js
test/data/: sign.json  vectors-native.json  vectors-original.json  vectors-prerewrite.json  vectors.json  verify.json
test/native/: index.js
test/util/: assert.js  index.js
utils/: eslint-bigint  has_lib.sh
